--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "dbDataContext": "Server=tcp:serverdbdataapp003.database.windows.net,1433;Initial Catalog=dbdataapp003;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
+    "dbDataContext": "Server=serverdbdataapp003.database.windows.net,1433;Database=dbdataapp003;User Id=datapp003;Password=Aa121212@@;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
 }
