--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "dbDataContext": "Server=serverdbdataapp003.database.windows.net,1433;Database=dbdataapp003;User Id=datapp003;Password=Aa121212@@;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "dbDataContext": "Server=tcp:serverdbdataapp003.database.windows.net,1433;Initial Catalog=dbdataapp003;Persist Security Info=False;User ID=datapp003;Password=Aa121212@@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
